# lightship

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile_twilight.sh
Client/: CMakeLists.txt
Client/include/LightshipClient/: ClientApplication.h  ClientApplication.hpp  MainMenu.h
Client/src/: ClientApplication.cpp  MainMenu.cpp  main.cpp
Lightship/: CMakeLists.txt
Lightship/include/Lightship/: DebugTextScroll.h  DebugTextScroll.hpp  GameConfig.h  GameConfig.hpp  GameConfigEvents.hpp  Map.h  Map.hpp  MapState.h  MapState.hpp  Math.h  Math.hpp  Player.h  Player.hpp  TrackingCamera.h  TrackingCamera.hpp  config.h.in  config.hpp.in  export.h.in
Lightship/include/Lightship/Chat/: Chat.h  Chat.hpp  ChatClient.h  ChatClient.hpp  ChatServer.h  ChatServer.hpp  Events.hpp
Lightship/include/Lightship/Menu/: Menu.hpp
Lightship/include/Lightship/Network/: Protocol.h  Protocol.hpp
Lightship/include/Lightship/UserManager/: ClientUserManager.h  ClientUserManager.hpp  Events.h  Events.hpp  Model.h  ServerUserManager.h  ServerUserManager.hpp  User.h  User.hpp  UserManager.h  UserManager.hpp  View.h
Lightship/src/: DebugTextScroll.cpp  GameConfig.cpp  Map.cpp  MapState.cpp  Math.cpp  Player.cpp  TrackingCamera.cpp
Lightship/src/Chat/: Chat.cpp  ChatClient.cpp  ChatServer.cpp
Lightship/src/Menu/: Menu.cpp  Menu_CONNECTING.cpp  Menu_CONNECTIONFAILED.cpp  Menu_CONNECTPROMPT.cpp  Menu_MAINLOCAL.cpp  Menu_MAINSERVER.cpp
Lightship/src/Network/: ClientProtocol.cpp
Lightship/src/UserManager/: ClientUserManager.cpp  Model.cpp  ServerUserManager.cpp  User.cpp  UserManager.cpp  View.cpp
MapConverter/: CMakeLists.txt
MapConverter/include/MapConverter/: MapConverter.hpp
MapConverter/src/: MapConverter.cpp  main.cpp
Server/: CMakeLists.txt
Server/include/LightshipServer/: ServerApplication.h  ServerApplication.hpp  SignalHandler.hpp  signals.h
Server/src/: ServerApplication.cpp  SignalHandler.cpp  main.cpp
Server/src/platform/linux/: signals.c
Server/src/platform/not-implemented/: signals.c
client/: CMakeLists.txt
client/include/lightship-client/: Chat.h  ClientAPI.h  ClientApplication.h  MainMenu.h  MenuScreen.h
client/src/: Chat.cpp  ClientApplication.cpp  MainMenu.cpp  MenuScreen.cpp  main.cpp
lightship/: CMakeLists.txt
lightship/include/lightship/: Chat.h  ChatClientProtocol.h  ChatEvents.h  ChatModel.h  ChatServerProtocol.h  ChatView.h  Config.h  DebugTextScroll.h  GameConfig.h  GameConfigEvents.h  Lightship.h  Map.h  MapState.h  Math.h  Player.h  Protocol.h  TrackingCamera.h  config.h.in
lightship/include/lightship/API/: ClientAPI.h  ServerAPI.h
lightship/include/lightship/ClientAPI/: ChatAPI.h
lightship/include/lightship/Network/: ChatProtocol.h  ClientProtocol.h  Protocol.h  UserManager.h  UserManagerEvents.h
lightship/src/: Chat.cpp  ChatClientProtocol.cpp  ChatModel.cpp  ChatServerProtocol.cpp  ChatView.cpp  Config.cpp  DebugTextScroll.cpp  GameConfig.cpp  Lightship.cpp  Map.cpp  MapState.cpp  Math.cpp  Player.cpp  TrackingCamera.cpp
lightship/src/Network/: ChatProtocol.cpp  ClientProtocol.cpp  UserManager.cpp
mapconverter/: CMakeLists.txt
mapconverter/include/mapconverter/: MapConverter.h
mapconverter/src/: MapConverter.cpp  main.cpp
scripts/: cross-compile.py
server/: CMakeLists.txt
server/include/lightship-server/: ServerApplication.h  SignalHandler.h
server/src/: ServerApplication.cpp  SignalHandler.cpp  main.cpp
server/src/platform/linux/: signals.c
server/src/platform/not-implemented/: signals.c
